--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -6,12 +6,12 @@ plugins:
     - preset: conventionalcommits
   - - "@semantic-release/release-notes-generator"
     - preset: conventionalcommits
+  - "@semantic-release/github"
   - - "@semantic-release/changelog"
     - assets:
         - CHANGELOG.md
   - - "@semantic-release/git"
     - assets:
         - CHANGELOG.md
-      message: "chore(release): ${nextRelease.version} [skip ci]"
-  - - "@semantic-release/github"
+    - message: "chore(release): ${nextRelease.version} [skip ci]"
 tagFormat: "v${version}"
