--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -13,5 +13,5 @@ plugins:
   - - "@semantic-release/git"
     - assets:
         - CHANGELOG.md
-    - message: "chore(release): ${nextRelease.version} [skip ci]"
+      message: "chore(release): ${nextRelease.version} [skip ci]"
 tagFormat: "v${version}"
