--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,10 +20,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           GPG_KEY: ${{ secrets.GPG_KEY }}
+          GPG_KEY_ID: ${{ env.GPG_KEY_ID }}
+          GPG_PASSWORD: ${{ secrets.GPG_PASSWORD }}
         with:
           version: "latest"
           verb: call 
           module: gopkg 
-          args: release --source=. --dry-run=false --gpg-key=env://GPG_KEY --token=env://GITHUB_TOKEN 
+          args: >
+            with-git-gpg-config 
+              --gpg-key=env://GPG_KEY 
+              --gpg-key-id=env://GPG_KEY_ID 
+              --git-author-name "semantic-release-bot"  
+              --git-author-email "shukomango@gmail.com" 
+            release  
+              --source=. 
+              --dry-run=false 
+              --token=env://GITHUB_TOKEN 
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
