--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,14 +26,6 @@ jobs:
           verb: call 
           module: gopkg 
           args: |
-            with-git-gpg-config \
-              --gpg-key=env://GPG_KEY \
-              --gpg-key-id=env://GPG_KEY_ID \
-              --git-author-name "semantic-release-bot" \
-              --git-author-email "shukomango@gmail.com" \
-            release \
-              --source=. \
-              --dry-run=false \
-              --token=env://GITHUB_TOKEN
+            with-git-gpg-config --gpg-key=env://GPG_KEY --gpg-key-id=env://GPG_KEY_ID --git-author-name "semantic-release-bot" --git-author-email "shukomango@gmail.com" release --source=. --dry-run=false --token=env://GITHUB_TOKEN
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
 
